--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,8 +1,2 @@
 FROM mcr.microsoft.com/devcontainers/java
-
-RUN sudo apt update
-RUN sudo apt -y install software-properties-common
-
-RUN sudo apt-add-repository ppa:swi-prolog/stable
-RUN sudo apt update
-RUN sudo apt -y install swi-prolog
+RUN apt update && apt install -y swi-prolog
